fix gap between map and cardlist

--- a/src/styles/components/cardlist.scss
+++ b/src/styles/components/cardlist.scss
@@ -243,7 +243,7 @@
   .card {
     flex: 0 0 calc(50% - 12px);
     max-width: calc(50% - 12px);
-    height: 250px;
+    height: 230px;
     scroll-snap-align: start;
 
     &::after {
@@ -279,6 +279,7 @@
     .card-details {
       opacity: 1 !important;
       pointer-events: auto !important;
+      font-size: 0.8em;
     }
 
     .card-title img {
